sample/msvc/error/c2534.cpp
// C2534.cpp
class A {
public:
   int i;
   A() { return i; }   // C2534
};
